Progress on the countries parameters menu